--- a/generator/Makefile
+++ b/generator/Makefile
@@ -6,8 +6,8 @@
 # Compilation variables
 CC = g++
 CFLAGS = -Wno-unused-parameter -Wall -Wextra -pedantic -g -O3 -std=c++14
-EXE = Tester
-SRC = $(wildcard src/*.cpp)
+EXE = Generator
+SRC = $(wildcard *.cpp)
 OBJ = $(SRC:.cpp=.o)
 
 # Compiles the program
@@ -16,42 +16,29 @@ build: $(OBJ)
 	@$(CC) -o $(EXE) $^ $(CFLAGS) ||:
 	$(info Compilation successfull)
 	-@rm -f */*.o ||:
-	@$(MAKE) -s gitignore ||:
 
 %.o: %.cpp
 	$(CC) -o $@ -c $< $(CFLAGS) 
 
 # Executes the binary
 run: clean build
-	./$(EXE) < input.txt
+	rm -f ../in/*
+	rm -f ../ref/*
+	./$(EXE)
 
 # Deletes the binary and object files
 clean:
-	rm -f $(EXE) $(OBJ) Homework.zip
+	rm -f $(EXE) $(OBJ)
+	rm -f ../in/*
+	rm -f ../ref/*
 	echo "Deleted the binary and object files"
 
 # Automatic coding style, in my personal style
 beauty:
-	clang-format -i -style=file */*.cpp
-	clang-format -i -style=file */*.hpp
+	clang-format -i -style=file *.cpp
+	clang-format -i -style=file *.hpp
 
 # Checks the memory for leaks
 MFLAGS = --leak-check=full --show-leak-kinds=all --track-origins=yes
 memory:clean build
-	valgrind $(MFLAGS) ./$(EXE) < input.txt
-
-# Adds and updates gitignore rules
-gitignore:
-	@echo "$(EXE)" > .gitignore ||:
-	@echo "generator/Generator" > .gitignore ||:
-	@echo "src/*.o" >> .gitignore ||:
-	@echo "generator/*.o" >> .gitignore ||:
-	@echo ".vscode*" >> .gitignore ||:	
-	@echo "in/*" >> .gitignore ||:	
-	@echo "ref/*" >> .gitignore ||:	
-	echo "Updated .gitignore"
-	
-# Creates an archive of the project
-pack: clean
-	zip -FSr Homework.zip *
-
+	valgrind $(MFLAGS) ./$(EXE)
