--- a/generator/Makefile
+++ b/generator/Makefile
@@ -5,19 +5,18 @@
 
 # Compilation variables
 CC = g++
-CFLAGS = -Wno-unused-parameter -Wall -Wextra -pedantic -g -O3 -std=c++14
-EXE = Generator
+CFLAGS = -Wno-unused-parameter -Wall -Wextra -pthread -pedantic -g -O3 -std=c++14
+EXE = generator
 SRC = $(wildcard *.cpp)
 OBJ = $(SRC:.cpp=.o)
-INP = ../in/*
-REF = ../ref/*
 
 # Compiles the program
 build: $(OBJ)
 	$(info Compiling code...)
 	@$(CC) -o $(EXE) $^ $(CFLAGS) ||:
 	$(info Compilation successfull)
-	-@rm -f */*.o ||:
+	-@rm -f *.o ||:
+	@$(MAKE) -s gitignore ||:
 
 %.o: %.cpp
 	$(CC) -o $@ -c $< $(CFLAGS) 
@@ -28,15 +27,8 @@ run: clean build
 
 # Deletes the binary and object files
 clean:
-	rm -f $(EXE) $(OBJ)
+	rm -f $(EXE) $(OBJ) generator.zip
 	echo "Deleted the binary and object files"
-
-# Deletes the binary, object files and generated files
-cleanAll:
-	rm -f $(EXE) $(OBJ)
-	rm -f $(INP)
-	rm -f $(REF)
-	echo "Deleted the binary binaries, object files and generated files"
 
 # Automatic coding style, in my personal style
 beauty:
@@ -47,3 +39,12 @@ beauty:
 MFLAGS = --leak-check=full --show-leak-kinds=all --track-origins=yes
 memory:clean build
 	valgrind $(MFLAGS) ./$(EXE)
+
+# Adds and updates gitignore rules
+gitignore:
+	@echo "$(EXE)" > .gitignore ||:
+	@echo "sources/*.o" >> .gitignore ||:
+	@echo ".vscode*" >> .gitignore ||:	
+	echo "Updated .gitignore"
+
+
